# glib-macro-bench

./: Cargo.toml  README.md
expanded/: Cargo.toml
new/: Cargo.toml  enum.rs  wrapper_boxed.rs
old/: Cargo.toml  wrapper_boxed.rs
